# Mobile-Game-Analytics-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  _run_churn.py  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: python-ci.yml
data/: make_dataset.py
data/config/: synthetic.yaml
docs/: mkdocs.yml
docs/docs/: greetings.txt  index.md
mobile_game_analytics_pipeline/: __init__.py  analytics.py  dataset.py  features.py  plots.py  welcome.py
mobile_game_analytics_pipeline/modeling/: predict.py  train.py
models/: churn_model.pkl
notebooks/: 0.9-SQL-Validation-and-Samples.ipynb  1.0-EDA-and-Funnel.ipynb  2.0-ROI-and-ROAS-by-Channel.ipynb  2.1-Retention-Cohorts.ipynb  3.0-Churn-Model.ipynb  eda.ipynb  retention_cohort.ipynb  roas_analysis.ipynb  sql_analysis.ipynb
references/sql/: funnel_by_channel.sql  funnel_step_rates.sql  installs_by_channel.sql  roi_by_channel.sql
reports/: Mobile Game UA Performance Overview.twb  Mobile Game UA – ROAS & Spend vs Revenue.twb  executive_summary.md  retention_cohort_summary.csv  roas_summary.csv
reports/tables/: backtest_scores.csv  churn_risk_segments.csv  funnel.csv  funnel_long.csv  installs_by_channel.csv  model_metrics.json  retention_by_channel.csv  retention_cohort_by_version.csv  roi_by_channel.csv  roi_by_channel_long.csv  sql_funnel_by_channel.csv  sql_funnel_step_rates.csv  sql_roi_by_channel.csv
scripts/: install.ps1
tests/: test_readme.md  test_synthetic.py
