[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-game-analytics-pipeline"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "docs/"

[tool.isort]
profile = "black"
line_length = 88
